--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
-    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta
+      name="description"
+      content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park"
+    />
+    <meta
+      name="keywords"
+      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
+    />
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
-    <link
+    <linkgit add 
       rel="apple-touch-icon"
       sizes="180x180"
       href="assets/favicon/apple-touch-icon.png"
@@ -27,5 +33,20 @@
       href="assets/favicon/favicon-16x16.png"
     />
   </head>
-  <body></body>
+  <body>
+    <!-- Header element -->
+    <header>
+      <h1>Header</h1>
+    </header>
+
+    <!-- Main content element -->
+    <main>
+      <h2>Main Content</h2>
+    </main>
+
+    <!-- Footer element -->
+    <footer>
+      <p>Footer</p>
+    </footer>
+  </body>
 </html>
