--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       name="keywords"
       content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
     />
+    <!--Stylesheet -->
+<link rel="stylesheet" href="assets/css/style.css">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
