--- a/index.html
+++ b/index.html
@@ -1,54 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park"
-    />
-    <meta
-      name="keywords"
-      content="love running, run, running club, runners, Ireland, Dublin, sport, exercise"
-    />
-    <!--Stylesheet -->
-<link rel="stylesheet" href="assets/css/style.css">
-    <!--Title-->
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <!-- Title -->
     <title>Love Running</title>
-    <!--Favicon-->
-    <linkgit add 
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
-  </head>
-  <body>
-    <!-- Header element -->
-    <header>
-      <h1>Header</h1>
-    </header>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
 
-    <!-- Main content element -->
-    <main>
-      <h2>Main Content</h2>
-    </main>
+<body>
+    <!-- Header -->
+    <header>Header</header>
 
-    <!-- Footer element -->
-    <footer>
-      <p>Footer</p>
-    </footer>
-  </body>
+    <!-- Main content -->
+    <main>Main content</main>
+
+    <!-- Footer -->
+    <footer>Footer</footer>
+</body>
+
 </html>
